--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: With that package you will be able to use Google Maps JavaScript AP
 dependencies:
   js:
     git:
-#      url: https://github.com/a14n/js-interop.git
-#      ref: isinstanceof
-    git: https://github.com/dart-lang/js-interop.git
+      url: https://github.com/a14n/js-interop.git
+      ref: isinstanceof
+#    git: https://github.com/dart-lang/js-interop.git
 #    hosted: js
