--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,6 @@
 name: dart_google_maps
+author: "Alexandre Ardhuin <alexandre.ardhuin@gmail.com>"
+homepage: https://github.com/a14n/dart-google-maps
 #version: 0.0.1
 description: With that package you will be able to use Google Maps JavaScript API v3 from Dart scripts.
 dependencies:
