--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,15 +3,9 @@ author: "Alexandre Ardhuin <alexandre.ardhuin@gmail.com>"
 homepage: https://github.com/a14n/dart-google-maps
 version: 1.1.7-dev
 description: With that package you will be able to use Google Maps JavaScript API from Dart scripts.
-dependencies:
-  js:
-    git:
-      url: git://github.com/a14n/js-interop.git
-      ref: wrapping
-#  js: '>=0.0.17 <1.0.0'
-#  js:
-#    git: https://github.com/dart-lang/js-interop.git
+dev_dependencies:
   unittest: any
   meta: any
   browser: any
-
+dependencies:
+  js: '>=0.0.20 <1.0.0'
