--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: google_maps
 author: "Alexandre Ardhuin <alexandre.ardhuin@gmail.com>"
 homepage: https://github.com/a14n/dart-google-maps
-version: 1.1.8
+version: 1.1.9-dev
 description: With that package you will be able to use Google Maps JavaScript API from Dart scripts.
 dev_dependencies:
   unittest: any
