--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,17 +1,14 @@
 name: google_maps
-version: 1.1.13-dev
+version: 2.0.0-M1
 author: Alexandre Ardhuin <alexandre.ardhuin@gmail.com>
 description: With that package you will be able to use Google Maps JavaScript API from Dart scripts.
 homepage: https://github.com/a14n/dart-google-maps
 dependencies:
   js_wrapping: any
-    #path: ../dart-js-wrapping
-    #git:
-    #  url: https://github.com/a14n/dart-js-wrapping.git
-    #  ref: dart-js
 dev_dependencies:
   browser: any
   editor_build: any
-  path: any
+  js_wrapping_generator: any
   meta: any
+  path: any
   unittest: any
