add SDK constraint

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,3 +8,5 @@ dependencies:
 dev_dependencies:
   browser: ">=0.9.0 <0.10.0"
   unittest: ">=0.9.0 <0.10.0"
+environment:
+  sdk: ">=0.8.10+6 <2.0.0"
