--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: google_maps
-version: 1.1.17-dev
+version: 1.1.17
 author: Alexandre Ardhuin <alexandre.ardhuin@gmail.com>
 description: That package allows to use Google Maps JavaScript API from Dart scripts.
 homepage: https://github.com/a14n/dart-google-maps
