--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: google_maps
-version: 2.0.0-M1
+version: 2.0.0
 author: Alexandre Ardhuin <alexandre.ardhuin@gmail.com>
 description: With that package you will be able to use Google Maps JavaScript API from Dart scripts.
 homepage: https://github.com/a14n/dart-google-maps
@@ -10,7 +10,6 @@ dependencies:
 dev_dependencies:
   browser: '>=0.9.0 <0.10.0'
   editor_build: '>=0.0.4 <0.1.0'
-  js_wrapping_generator:
-    path: ../dart-js-wrapping-generator
+  js_wrapping_generator: '0.0.2'
   path: '>=0.9.0 <0.10.0'
   unittest: '>=0.9.0 <0.10.0'
