--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,5 +11,6 @@ dependencies:
       ref: source_gen
       url: git@github.com:a14n/js-interop.git
 dev_dependencies:
-  browser: '>=0.9.0 <0.10.0'
-  unittest: '>=0.9.0 <0.10.0'
+  browser: ^0.10.0
+  test: ^0.12.0
+  html: ^0.12.0
