--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,3 +14,6 @@ dev_dependencies:
   browser: ^0.10.0
   test: ^0.12.0
   html: ^0.12.0
+dependency_overrides:
+  js:
+    path: ../js-interop-generator
