--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: google_maps
-version: 3.2.0+2
+version: 3.2.1
 author: Alexandre Ardhuin <alexandre.ardhuin@gmail.com>
 description: With that package you will be able to use Google Maps JavaScript API from Dart scripts.
 homepage: https://github.com/a14n/dart-google-maps
@@ -7,12 +7,12 @@ environment:
   sdk: '>=1.21.0 <2.0.0'
 dependencies:
   func: ^0.1.0
-  js_wrapping: ^0.3.0
+  js_wrapping: ^0.4.0
   meta: ^1.0.3
 dev_dependencies:
   browser: ^0.10.0
   html: ^0.12.0
-  js_wrapping_generator: ^0.3.0
+  js_wrapping_generator: ^0.4.0
   test: ^0.12.0
 #dependency_overrides:
 #  js_wrapping:
