--- a/build.steps.yaml
+++ b/build.steps.yaml
@@ -7,21 +7,20 @@ targets:
   google_maps:
     builders:
       js_wrapping_generator|js_wrapping:
-    sources:
-    - 'lib/src/google_maps_src.dart'
+        generate_for:
+        - 'lib/src/google_maps_src.dart'
   google_maps_lib:
     dependencies:
     - :google_maps
     builders:
       js_wrapping_generator|js_wrapping:
-    sources:
-    - 'lib/src/google_maps_src_*.dart'
+        generate_for:
+        - 'lib/src/google_maps_src_*.dart'
   example:
     dependencies:
     - :google_maps
     - :google_maps_lib
     builders:
       js_wrapping_generator|js_wrapping:
-    sources:
-    - 'example/**/*.dart'
-    - 'example/*.dart'
+        generate_for:
+        - 'example/**.dart'
