--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,14 +17,14 @@ dev_dependencies:
   test: ^0.12.0
 dependency_overrides:
   js_wrapping:
-    git:
-      url: https://github.com/a14n/dart-js-wrapping.git
-      ref: build
-      path: js_wrapping
-#    path: ../dart-js-wrapping/js_wrapping
+    # git:
+    #   url: https://github.com/a14n/dart-js-wrapping.git
+    #   ref: build
+    #   path: js_wrapping
+    path: ../dart-js-wrapping/js_wrapping
   js_wrapping_generator:
-    git:
-      url: https://github.com/a14n/dart-js-wrapping.git
-      ref: build
-      path: js_wrapping_generator
-#    path: ../dart-js-wrapping/js_wrapping_generator
+    # git:
+    #   url: https://github.com/a14n/dart-js-wrapping.git
+    #   ref: build
+    #   path: js_wrapping_generator
+    path: ../dart-js-wrapping/js_wrapping_generator
