--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,30 +1,30 @@
 name: google_maps
-version: 3.2.2
+version: 3.2.3
 author: Alexandre Ardhuin <alexandre.ardhuin@gmail.com>
 description: With that package you will be able to use Google Maps JavaScript API from Dart scripts.
 homepage: https://github.com/a14n/dart-google-maps
 environment:
-  sdk: '>=1.21.0 <2.0.0'
+  sdk: '>=2.0.0-dev.44.0 <2.0.0'
 dependencies:
-  func: ^0.1.0
-  js_wrapping: ^0.4.2
-  meta: ^1.0.3
+  func: ^1.0.0
+  js_wrapping: ^0.4.4
+  meta: ^1.1.2
 dev_dependencies:
   browser: ^0.10.0
-  build_runner: ^0.7.9
-  html: ^0.12.0
-  js_wrapping_generator: ^0.4.2
+  build_runner: ^0.8.1
+  html: ^0.13.3
+  js_wrapping_generator: ^0.4.4
   test: ^0.12.0
-dependency_overrides:
-  js_wrapping:
-    # git:
-    #   url: https://github.com/a14n/dart-js-wrapping.git
-    #   ref: build
-    #   path: js_wrapping
-    path: ../dart-js-wrapping/js_wrapping
-  js_wrapping_generator:
-    # git:
-    #   url: https://github.com/a14n/dart-js-wrapping.git
-    #   ref: build
-    #   path: js_wrapping_generator
-    path: ../dart-js-wrapping/js_wrapping_generator
+# dependency_overrides:
+#   js_wrapping:
+#     # git:
+#     #   url: https://github.com/a14n/dart-js-wrapping.git
+#     #   ref: build
+#     #   path: js_wrapping
+#     path: ../dart-js-wrapping/js_wrapping
+#   js_wrapping_generator:
+#     # git:
+#     #   url: https://github.com/a14n/dart-js-wrapping.git
+#     #   ref: build
+#     #   path: js_wrapping_generator
+#     path: ../dart-js-wrapping/js_wrapping_generator
