--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,25 +9,25 @@ environment:
   sdk: '>=2.0.0-dev.67.0 <3.0.0'
 dependencies:
   func: ^1.0.0
-  js_wrapping: ^0.4.5
+  js_wrapping: ^0.5.0
   meta: ^1.1.2
 dev_dependencies:
   build_runner: ^0.9.2
   build_test: ^0.10.3
   build_web_compilers: ^0.4.0
   html: ^0.13.3
-  js_wrapping_generator: ^0.4.5
+  js_wrapping_generator: ^0.5.0
   test: ^1.3.0
-dependency_overrides:
-  js_wrapping:
-    # git:
-    #   url: https://github.com/a14n/dart-js-wrapping.git
-    #   ref: build
-    #   path: js_wrapping
-    path: ../dart-js-wrapping/js_wrapping
-  js_wrapping_generator:
-    # git:
-    #   url: https://github.com/a14n/dart-js-wrapping.git
-    #   ref: build
-    #   path: js_wrapping_generator
-    path: ../dart-js-wrapping/js_wrapping_generator
+# dependency_overrides:
+#   js_wrapping:
+#     # git:
+#     #   url: https://github.com/a14n/dart-js-wrapping.git
+#     #   ref: build
+#     #   path: js_wrapping
+#     path: ../dart-js-wrapping/js_wrapping
+#   js_wrapping_generator:
+#     # git:
+#     #   url: https://github.com/a14n/dart-js-wrapping.git
+#     #   ref: build
+#     #   path: js_wrapping_generator
+#     path: ../dart-js-wrapping/js_wrapping_generator
