--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ jobs:
     - dartfmt -n --set-exit-if-changed .
     # TODO re-enable --fatal-lints once https://github.com/dart-lang/sdk/issues/25551 is fixed
     # - dartanalyzer --fatal-warnings --fatal-hints --fatal-lints .
-    - dartanalyzer --fatal-warnings --fatal-hints .
+    - dartanalyzer --fatal-warnings --fatal-hints --no-lints .
     - pub run test
