--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -13,7 +13,7 @@ linter:
     # - avoid_annotating_with_dynamic # conflict with always_declare_return_types
     # - avoid_as # conflict with implicit-casts: false
     - avoid_bool_literals_in_conditional_expressions
-    - avoid_catches_without_on_clauses
+    # - avoid_catches_without_on_clauses # we don't know what Promises throw
     - avoid_catching_errors
     - avoid_classes_with_only_static_members
     - avoid_double_and_int_checks
