--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: google_maps
-version: 4.0.0-dev
+version: 4.0.0
 description: >
   With that package you will be able to use Google Maps JavaScript API from Dart
   scripts.
@@ -7,7 +7,7 @@ homepage: https://github.com/a14n/dart-google-maps
 environment:
   sdk: '>=2.6.0 <3.0.0'
 dependencies:
-#  js_wrapping: ^0.5.0
+  js_wrapping: ^0.6.0
   meta: ^1.1.2
 dev_dependencies:
   build_runner: ^1.10.0
@@ -15,18 +15,18 @@ dev_dependencies:
   dart_style: ^1.3.6
   html: ^0.14.0+3
   http: ^0.12.1
-#  js_wrapping_generator: ^0.5.0
+  js_wrapping_generator: ^0.6.0
   path: ^1.7.0
-dependency_overrides:
-  js_wrapping:
-    git:
-      url: https://github.com/a14n/dart-js-wrapping.git
-      ref: master
-      path: js_wrapping
-    #path: ../dart-js-wrapping/js_wrapping
-  js_wrapping_generator:
-    git:
-      url: https://github.com/a14n/dart-js-wrapping.git
-      ref: master
-      path: js_wrapping_generator
-    # path: ../dart-js-wrapping/js_wrapping_generator
+# dependency_overrides:
+#   js_wrapping:
+#     git:
+#       url: https://github.com/a14n/dart-js-wrapping.git
+#       ref: master
+#       path: js_wrapping
+#     #path: ../dart-js-wrapping/js_wrapping
+#   js_wrapping_generator:
+#     git:
+#       url: https://github.com/a14n/dart-js-wrapping.git
+#       ref: master
+#       path: js_wrapping_generator
+#     # path: ../dart-js-wrapping/js_wrapping_generator
