--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: google_maps
-version: 6.1.0
+version: 6.1.1
 description: >
   With that package you will be able to use Google Maps JavaScript API from Dart
   scripts.
@@ -12,6 +12,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.0.0
   build_web_compilers: ^3.0.0
+  collection: ^1.16.0
   dart_style: ^2.0.0
   html: ^0.15.0
   http: ^0.13.0
