--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: google_maps
-version: 7.0.0-beta.1
+version: 7.0.0
 description: >
   With that package you will be able to use Google Maps JavaScript API from Dart
   scripts.
