--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: google_maps
-version: 8.0.0-dev.1
+version: 8.0.0-dev.2
 description: >
   With that package you will be able to use Google Maps JavaScript API from Dart
   scripts.
@@ -12,6 +12,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.0
   build_web_compilers: ^4.0.0
+  collection:
   html: ^0.15.0
   http: ^0.13.0
   path: ^1.7.0
