--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,19 @@
 name: google_maps
-version: 8.0.0-dev.2
+version: 8.0.0-dev.3
 description: >
   With that package you will be able to use Google Maps JavaScript API from Dart
   scripts.
 homepage: https://github.com/a14n/dart-google-maps
 environment:
-  sdk: '>=3.4.0 <4.0.0'
+  sdk: ^3.4.0
 dependencies:
   meta: ^1.3.0
-  web: ^0.5.0
+  web: ">=0.5.1 <2.0.0"
 dev_dependencies:
   build_runner: ^2.4.0
   build_web_compilers: ^4.0.0
   collection:
   html: ^0.15.0
-  http: ^0.13.0
+  http: ^1.2.2
   path: ^1.7.0
   petitparser: ^6.0.2
